Fix local task scrollbar

--- a/components/local-tasks-nav/local-tasks-nav.css
+++ b/components/local-tasks-nav/local-tasks-nav.css
@@ -1,7 +1,7 @@
 .local-tasks-nav.tabs-box{
   position: relative;
   max-width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   flex-wrap: nowrap;
   .nav-link,
   .nav-link:hover {
